--- a/css/style.css
+++ b/css/style.css
@@ -1071,6 +1071,185 @@ button.btn-kontakt {
 /**************
   Media Query
 ***************/
+@media (min-width: 768px) and (max-width: 1279px) {
+	.section-logo img {
+		width: 75%;
+	}
+	.menu-finance .collapse:not(.show) {
+		display: block;
+	}
+	.navbar-nav {
+		flex-direction: row;
+	}
+	.header-section .menu-finance .nav-link,
+	.btn-login .login-txt,
+	.menu-dropdown ul.dropdown-menu li a{
+		font-size: 10px;
+		line-height: 15px;
+	}
+	.menu-dropdown ul.dropdown-menu {
+		padding: 0;
+	}
+	.section-home {
+		padding-top: 2em;
+	}
+	.content-slider {
+		margin: 0 0 2em 1em;
+	}
+	.content-slider p, 
+	.txt-scroller ul li {
+		font-size: 24px;
+		line-height: 36px;
+		margin-bottom: 0px;
+	}
+	.txt-scroller {
+		height: 36px;
+		margin-top: 8px;
+	}
+	button.btn-36h {
+		height: 64px;
+		width: 49%;
+		font-size: 18px;
+		line-height: 70px;
+	}
+	.btn-slider {
+		padding-left: 12px;
+	}
+	.section-home-card {
+		margin: -15px 0 6em;
+	}
+	.section-home .img-home .img-clover {
+		width: 105%;
+	}
+	.section-overlay {
+		height: 392px;
+		width: 76%;
+		background: #F5F5F5;
+		border-radius: 0px 0px 184px 0px;
+	}
+	.section-home .img-shadow-clover {
+		left: -8px;
+		top: 59%;
+		width: 25.8%;
+	}
+	.img-home-card img {
+		width: 372px;
+		right: 0;
+	}
+	.section-card {
+		padding-top: 11em;
+	}
+	.card-button {
+		padding-left: 0;
+	}
+	.vector-bg {
+		width: 46px;
+		height: 46px;
+	}
+	.card-vector {
+		top: 10px;
+		left: 10px;
+		width: 26px;
+		height: 26px;
+    }
+	.card-block {
+		right: 0;
+	}
+	.home-card {
+		width: 225px;
+		border-radius: 22px;
+		padding: 30px 22px;
+		margin-bottom: 25px;
+		min-height: 255px;
+	}
+	.home-card h4 {
+		font-size: 14px;
+		line-height: 21px;
+	}
+	.home-card p {
+		font-size: 12px;
+		line-height: 14px;
+	}
+	.section-card-right {
+		position: relative;
+		left: 25px;
+	}
+	.img-card-bottom img {
+		width: 54px;
+		height: 54px;
+	}
+	.card-block button.btn-card {
+		font-size: 18px;
+		line-height: 27px;
+	}
+	.card-block button.btn-card {
+		padding: 0 75px;
+		font-size: 18px;
+		line-height: 27px;
+		height: 76px;
+	}
+	.content-add {
+		width: 84%;
+		margin-top: -10px;
+	}
+	.content-add p {
+		font-size: 24px;
+		line-height: 36px;
+	}
+	.inner-address-block {
+		min-height: 308px;
+		padding: 4em 2em 2em 8em;
+	}
+	.inner-address-block > img {
+		width: 45px;
+		height: 45px;
+	}
+	.home-address .col-md-3 {
+		width: 15%;
+	}
+	.home-address .col-md-9 {
+		width: 85%;
+	}
+	button.add-info a {
+		font-size: 18px;
+		line-height: 27px;
+	}
+	button.add-info {
+		width: 64%;
+		height: 77px;
+		margin-top: 25px;
+	}
+	.unser-team h2 {
+		font-size: 36px;
+		line-height: 54px;
+	}
+	.unser-team .unser-card {
+		width: 191px;
+	}
+	.unser-card h5.card-title {
+		font-size: 18px;
+		line-height: 50px;
+		margin: 15px 0 5px;
+	}
+	.unser-card p.card-text {
+		min-height: 42px;
+		font-size: 14px;
+		line-height: 21px;
+		margin-bottom: 10px
+	}
+	.team-btn {
+		font-size: 14px;
+		line-height: 21px;
+		padding: 12px;
+		width: 95%;
+	}
+	.unser-team {
+		width: 100%;
+	}
+	.card-body {
+		padding: 1rem 10px;
+	}
+}
 @media screen and (max-width: 767px) {
 	nav.menu-finance {
 		position: relative;
@@ -1080,16 +1259,21 @@ button.btn-kontakt {
 		top: 30px;
 		right: 0;
 		width: 13em;
+		box-shadow: 0px 0px 1px #018343;
 	}
 	.navbar-nav {
 		background: rgb(239 239 239 / 90%);
 	}
-	.header-section .menu-finance .nav-link {
+	.header-section .menu-finance .nav-link,
+	.header-section .menu-finance .dropdown-item {
 		font-size: 13px;
 		line-height: 18px;
 		padding: 8px 5px 8px 25px;
 		border-bottom: 1.5px solid #ddd;
 		text-align: left;
+	}
+	.header-section .menu-finance .dropdown-item {
+		border: none;
 	}
 	.container-finance {
 		padding: 15px 1em 0;
@@ -1115,7 +1299,7 @@ button.btn-kontakt {
 		margin: 1px 5px 0 0;
 	}
 	.btn-login .login-txt {
-		line-height: 21px;
+		line-height: 22px;
 		font-size: 14px;
 	}
 	.col-menu {
@@ -1126,6 +1310,9 @@ button.btn-kontakt {
 	.header-section button.navbar-toggle,
 	.section-home .img-clover-mobile {
 		display: block;
+	}
+	button.navbar-toggle {
+		background: none;
 	}
 	.content-slider p, 
 	.txt-scroller ul li {
@@ -1172,6 +1359,7 @@ button.btn-kontakt {
 		padding: 0 5px;
 		position: relative;
 		right: unset;
+		z-index: 1;
 	}
 	.vector-bg {
 		width: 50%;
@@ -1287,7 +1475,7 @@ button.btn-kontakt {
 		margin: 15px 0 0;
 	}
 	.unser-card p.card-text {
-		min-height: auto;
+		min-height: 42px;
 		font-size: 14px;
 		line-height: 21px;
 		margin-bottom: 10px
