--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,952 @@
-@import "style.css"; 
+@import url("css/style.css");
+
+/**************
+  Media Query
+***************/
+@media (min-width: 768px) and (max-width: 1279px) {
+	.navbar-nav .dropdown-menu {
+		position: absolute;
+	}
+	.section-logo img {
+		width: 75%;
+	}
+	.menu-finance .collapse:not(.show) {
+		display: block;
+	}
+	.navbar-nav {
+		flex-direction: row;
+	}
+	.header-section .menu-finance .nav-link,
+	.btn-login .login-txt,
+	.menu-dropdown ul.dropdown-menu li a{
+		font-size: 10px;
+		line-height: 15px;
+	}
+	.menu-dropdown ul.dropdown-menu {
+		padding: 0;
+	}
+	.section-home {
+		padding-top: 2em;
+	}
+	.content-slider {
+		margin: 0 0 2em 1em;
+	}
+	.content-slider p, 
+	.txt-scroller ul li {
+		font-size: 24px;
+		line-height: 36px;
+		margin-bottom: 0px;
+	}
+	.txt-scroller {
+		height: 36px;
+		margin-top: 8px;
+	}
+	button.btn-36h {
+		height: 64px;
+		width: 49%;
+		font-size: 18px;
+		line-height: 70px;
+	}
+	.btn-slider {
+		padding-left: 12px;
+	}
+	.section-home-card {
+		margin: -15px 0 6em;
+	}
+	.section-home .img-home .img-clover {
+		width: 105%;
+	}
+	.section-overlay {
+		height: 392px;
+		width: 76%;
+		background: #F5F5F5;
+		border-radius: 0px 0px 184px 0px;
+	}
+	.section-home .img-shadow-clover {
+		left: -8px;
+		top: 59%;
+		width: 25.8%;
+	}
+	.img-home-card img {
+		width: 372px;
+		right: 0;
+	}
+	.section-card {
+		padding-top: 11em;
+	}
+	.card-button {
+		padding-left: 0;
+	}
+	.vector-bg {
+		width: 46px;
+		height: 46px;
+	}
+	.card-vector {
+		top: 10px;
+		left: 10px;
+		width: 26px;
+		height: 26px;
+    }
+	.card-block {
+		right: 0;
+	}
+	.home-card {
+		width: 225px;
+		border-radius: 22px;
+		padding: 30px 22px;
+		margin-bottom: 25px;
+		min-height: 255px;
+	}
+	.home-card h4 {
+		font-size: 14px;
+		line-height: 21px;
+	}
+	.home-card p {
+		font-size: 12px;
+		line-height: 14px;
+	}
+	.section-card-right {
+		position: relative;
+		left: 25px;
+	}
+	.img-card-bottom img {
+		width: 54px;
+		height: 54px;
+	}
+	.card-block button.btn-card {
+		font-size: 18px;
+		line-height: 27px;
+	}
+	.card-block button.btn-card {
+		padding: 0 75px;
+		font-size: 18px;
+		line-height: 27px;
+		height: 76px;
+	}
+	.content-add {
+		width: 84%;
+		margin-top: -10px;
+	}
+	.content-add p {
+		font-size: 24px;
+		line-height: 36px;
+	}
+	.inner-address-block {
+		min-height: 308px;
+		padding: 4em 2em 2em 8em;
+	}
+	.inner-address-block > img {
+		width: 45px;
+		height: 45px;
+	}
+	.home-address .col-md-3 {
+		width: 15%;
+	}
+	.home-address .col-md-9 {
+		width: 85%;
+	}
+	button.add-info a {
+		font-size: 18px;
+		line-height: 27px;
+	}
+	button.add-info {
+		width: 64%;
+		height: 77px;
+		margin-top: 25px;
+	}
+	.unser-team h2 {
+		font-size: 36px;
+		line-height: 54px;
+	}
+	.unser-team .unser-card {
+		width: 191px;
+	}
+	.unser-card h5.card-title {
+		font-size: 18px;
+		line-height: 50px;
+		margin: 15px 0 5px;
+	}
+	.unser-card p.card-text {
+		min-height: 42px;
+		font-size: 14px;
+		line-height: 21px;
+		margin-bottom: 10px
+	}
+	.team-btn {
+		font-size: 14px;
+		line-height: 21px;
+		padding: 12px;
+		width: 95%;
+	}
+	.unser-team {
+		width: 100%;
+	}
+	.card-body {
+		padding: 1rem 10px;
+	}
+	.footer-section ul {
+		padding-left: 0;
+	}
+	.home-footer-address {
+		display: block;
+	}
+	.home-footer-address .hzusage-footer {
+		width: 100%;
+		margin: 2em auto 0;
+		background: #F5F5F5;
+		padding: 20px 0;
+	}
+	.hzusage-footer p {
+		margin-bottom: 0;
+		font-size: 14px;
+		line-height: 21px;
+	}
+	.footer-section a.footer-link {
+		font-size: 12px;
+		line-height: 18px;
+		margin-bottom: 5px;
+	}
+	.footer-section {
+		padding: 30px 40px 25px;
+	}
+	.footer-section span.social-icon {
+		width: 72%;
+		height: 30px;
+		font-size: 11px;
+		line-height: 28px;
+	}
+	.footer-section span.icon-social {
+		width: auto;
+	}
+	.footer-section span.social-icon img {
+		width: 13px;
+		height: 13px;
+		margin-right: 8px;
+		vertical-align: -3px;
+	}
+	.footer-social-menu li.footer-social-item {
+		font-size: 11px;
+		margin: 15px 0;
+	}
+	.footer-section span.icon-social img {
+		width: 28px;
+		height: 28px;
+		margin-left: 10px;
+	}
+	/**Inner pages**/
+	.page-accordian h2 {
+		font-size: 36px;
+		line-height: 54px;
+	}
+	.container-page-content button.accordion-button {
+		font-size: 16px;
+		line-height: 24px;
+	}
+	.container-page-content button.accordion-button:before {
+		width: 40px;
+		height: 40px;
+		margin-right: 30px;
+	}
+	.container-page-content button.accordion-button:after {
+		width: 16px;
+		height: 4px;
+		left: 11px;
+	}
+	.container-page-content button.accordion-button[aria-expanded="true"]:after {
+		width: 16px;
+		height: 16px;
+		left: 12px;
+	}
+	.accordion-body ul {
+		padding: 10px 10px 10px 3em;
+	}
+	.accordion-body li, 
+	.accordion-body h5 {
+		font-size: 16px;
+		line-height: 32px;
+	}
+	.accordion-body h5 {
+		padding: 0 10px 0 2.8em;
+	}
+	button.btn-acc {
+		font-size: 20px;
+		line-height: 72px;
+		width: 48.5%;
+		height: 66px;
+	}
+	button.btn-termin {
+		font-size: 20px;
+		line-height: 75px;
+		width: 68%;
+		height: 66px;
+	}
+	.container-page-content h2.page-title {
+		font-size: 30px;
+		line-height: 45px;
+		margin-bottom: 20px;
+	}
+	.page-content p, 
+	.page-content li {
+		font-size: 16px;
+		line-height: 24px;
+	}
+	.page-summary {
+		padding: 4em 4em 4em 3.5em;
+	}
+	.summary-shadow img {
+		width: 317px;
+		height: 316px;
+	}
+	ul.baufina-list li {
+		font-size: 21px;
+		line-height: 61px;
+	}
+	ul.baufina-list li:before, 
+	ul.ansch-list li:before {
+		width: 16px;
+		height: 16px;
+		background-size: 100% 100% !important;
+		margin-right: 1em;
+		vertical-align: 0px;
+	}
+	.baufina-list-content {
+		margin-top: 8em;
+		margin-right: -11px;
+	}
+	ul.baufina-list {
+		padding: 2em 0 2em 3em;
+	}
+	.baufina-right{padding-left: 0;}
+	.photo-family .img-family {
+		width: 98%;
+		margin-top: 4em;
+		left: 18px;
+	}
+	.container-page-content .ansch-content-full h2 {
+		font-size: 24px;
+		line-height: 36px;
+		margin-bottom: 30px;
+	}
+	.ansch-content-full {
+		width: 100%;
+		padding: 5em 3em 2em 3em;
+	}
+	ul.ansch-list {
+		margin: 1em 0;
+	}
+	.page-content.ansch-content p, 
+	.page-content.ansch-content li {
+		font-size: 14px;
+		line-height: 26px;
+	}
+	button.btn-ansch, 
+	button.btn-projekt {
+		font-size: 20px;
+		line-height: 72px;
+		width: 288px;
+		height: 66px;
+    }
+	.ansch-accordian button.btn-acc {
+		margin-top: 2em;
+	}
+	.hzusage-content-full {
+		width: 78%;
+	}
+	.container-page-content .hzusage-content-full h2 {
+		font-size: 36px;
+		line-height: 54px;
+	}
+	.page-content .hzusage-content-full p, 
+	.page-content .hzusage-content-full li {
+		font-size: 18px;
+		line-height: 28px;
+	}
+	.termin-content h2,
+	.kontakt-content h2, 
+	.uber-content h2 {
+		font-size: 30px;
+		line-height: 63px;
+		margin-bottom: 0;
+	}
+	.kontakt-content {
+		margin: 1em auto 2em;
+	}
+	.termin-content p,
+	.kontakt-content p, 
+	.uber-content p {
+		width: 70%;
+		font-size: 18px;
+		line-height: 25px;
+	}
+	.block-quotes:before, 
+	.block-quotes:after {
+		background-size: 100% 100%;
+		width: 100px;
+		height: 100px;
+	}
+	.termin-content-full .block-quotes:after,
+	.kontakt-content-full .block-quotes:after,
+	.uber-content-full .block-quotes:after {
+		right: 3em;
+		top: -30px;
+	}
+	.termin-content-full .block-quotes:before,
+	.kontakt-content-full .block-quotes:before,
+	.uber-content-full .block-quotes:before {
+		left: 4em;
+		top: 4em;
+	}
+	.termin-content {
+		margin: 1em auto 4em;
+	}
+	.kontakt-form {
+		width: 80%;
+		margin: 0 auto 4em;
+		padding: 4em 3em;
+	}
+	.kontakt-form .form-label {
+		font-size: 18px;
+		line-height: 40px;
+	}
+	.kontakt-form input.form-control {
+		height: 73px;
+	}
+	.kontakt-form label.form-check-label {
+		font-size: 13px;
+	}
+	.kontakt-form button.btn-senden {
+		background: url(../images/senden-bg-tab.png) no-repeat;
+		font-size: 20px;
+		line-height: 73px;
+		width: 41%;
+		height: 67px;
+		color: #fff;
+		margin-top: 2em;
+	}
+	.kontakt-form:after {
+		background-size: 100% 100%;
+		width: 417px;
+		height: 417px;
+	}
+	.kontakt-form:before {
+		background-size: 100% 100%;
+		width: 255px;
+		height: 255px;
+	}
+	.container-page-content .hzusage-footer p {
+		font-size: 12px;
+		line-height: 18px;
+	}
+	.hzusage-address {
+		margin-top: 18px;
+	}
+	.container-page-content .hzusage-footer {
+		margin: 2em auto 0;
+	}
+	.single-uber-content {
+		width: 90%;
+		margin: 0 auto 6em;
+	}
+	.uber-details h3 {
+		font-size: 36px;
+	}
+	h6.sub-title {
+		font-size: 20px;
+		margin-bottom: 5px;
+	}
+	.sub-detail {
+		font-size: 13px;
+		margin-bottom: 10px;
+	}
+	.uber-details .sub-detail:before {
+		background-size: 100% 100%;
+		margin-right: 15px;
+	}
+	.birth-date.sub-detail:before {
+		width: 20px;
+		height: 25px;
+		vertical-align: -5px;
+	}
+	.education.sub-detail:before {
+		width: 26px;
+		height: 22px;
+	}
+	.people-no.sub-detail:before {
+		width: 27px;
+		height: 18px;
+	}
+	.occupation.sub-detail:before {
+		width: 21px;
+		height: 20px;
+		top: 4px;
+	}
+	.sub-detail span {
+		padding-left: 43px;
+		line-height: 26px;
+	}
+	.uber-details-full > img {
+		margin-right: 2.5em;
+		width: 202px;
+		height: 274px;
+	}
+	.uber-details {
+		margin-top: -12px;
+	}
+	.single-uber-content p {
+		font-size: 16px;
+		line-height: 22px;
+	}
+	button.btn-uber, 
+	button.btn-kontakt {
+		font-size: 20px;
+		line-height: 30px;
+		height: 66px;
+	}
+	.button-uber {
+		text-align: center;
+	}
+	button.btn-uber {
+		padding: 25px 10px 25px;
+		width: 288px;
+		color: #fff;
+	}
+	.kontakt-button > img {
+		display: none;
+	}
+	button.btn-kontakt {
+		background: url(../images/btn-kontakt.png) no-repeat;
+	}
+	.uber-details-full {
+		margin-bottom: 1.8em;
+	}
+}
+@media screen and (max-width: 767px) {
+	nav.menu-finance {
+		position: relative;
+	}
+	div#myNavbar {
+		position: absolute;
+		top: 30px;
+		right: 0;
+		width: 13em;
+		box-shadow: 0px 0px 1px #018343;
+	}
+	.navbar-nav {
+		background: rgb(239 239 239 / 90%);
+	}
+	.header-section .menu-finance .nav-link,
+	.header-section .menu-finance .dropdown-item {
+		font-size: 13px;
+		line-height: 18px;
+		padding: 8px 5px 8px 25px;
+		border-bottom: 1.5px solid #ddd;
+		text-align: left;
+	}
+	.header-section .menu-finance .dropdown-item {
+		border: none;
+	}
+	.container-finance {
+		padding: 15px 1em 0;
+	}
+	.section-logo img {
+		width: 100%;
+	}
+	nav.menu-finance {
+		display: inline-block;
+		width: auto;
+		padding: 0;
+	}
+	img.mobile-menu-icon {
+		display: inline-block;
+		width: 24px;
+		height: 24px;
+	}
+	.header-section > div {
+		padding: 0 8px;
+	}
+	.header-section a.btn-login {
+		width: 43%;
+		margin: 1px 5px 0 0;
+	}
+	.btn-login .login-txt {
+		line-height: 22px;
+		font-size: 14px;
+	}
+	.col-menu {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+    .home-footer-address,
+	.header-section button.navbar-toggle,
+	.section-home .img-clover-mobile {
+		display: block;
+	}
+	button.navbar-toggle {
+		background: none;
+	}
+	.content-slider p, 
+	.txt-scroller ul li {
+		font-size: 18px;
+		line-height: 30px;
+	}
+	.txt-scroller {
+		height: 32px;
+		margin-top: 8px;
+	}
+	.section-home {
+		padding-top: 2em;
+		display: flex;
+		flex-direction: column-reverse;
+	}
+	.btn-slider,
+	.section-overlay,
+	.section-home .img-clover,
+	.section-home .img-shadow-clover {
+		display: none;
+	}
+	.content-slider {
+		margin: 0;
+		position: relative;
+	}
+	.img-clover-mobile {
+		position: relative;
+		left: 23%;
+		top: -54px;
+		z-index: 0;
+	}
+	.txt-scroller::before,
+	.txt-scroller::after {background: none;}
+	.section-home-card {
+		margin: 0;
+		margin-top: -6em;
+	}
+	.section-card {
+		padding-top: 0;
+		margin-bottom: 20px;
+		justify-content: space-between;
+	}
+	.card-block {
+		padding: 0 5px;
+		position: relative;
+		right: unset;
+		z-index: 1;
+	}
+	.vector-bg {
+		width: 50%;
+	}
+	.card-vector {
+		top: 5px;
+		left: 5px;
+		width: 30%;
+	}
+	.home-card {
+		width: 100%;
+		border-radius: 15px;
+		padding: 15px 7px;
+		margin-bottom: 20px;
+		min-height: 138px;
+		position: relative;
+	}
+	.home-card h4 {
+		font-size: 10px;
+		line-height: 15px;
+		margin: 10px 0;
+	}
+	.home-card p {
+		font-size: 8px;
+		line-height: 14px;
+		margin-bottom: 2px;
+	}
+	.section-card > div {
+		flex: unset;
+		width: 48%;
+	}
+	.img-card-bottom img {
+		width: 35px;
+		height: 35px;
+	}
+	.card-icon {
+		margin-left: 8px;
+	}
+	.card-block button.btn-card {
+		padding: 0px 32px;
+		font-size: 12px;
+		line-height: 18px;
+		height: 41px;
+	}
+	.card-button > img {
+		width: 100%;
+		top: -8px;
+		left: 8px;
+	}
+	.card-button {
+		padding-left: 0;
+	}
+	.img-home-card {
+		display: none;
+	}
+	.content-add p {
+		font-size: 14px;
+		line-height: 21px;
+	}
+	.inner-address-block {
+		min-height: 164px;
+		width: 100%;
+		margin-right: unset;
+		padding: 30px 10px 38px 3.5em;
+		height: 100%;
+		position: relative;
+		right: -16px;
+	}
+	button.add-info {
+		background: url(../images/btn-add-info.png) no-repeat;
+		background-size: 100% 100%;
+		font-weight: 600;
+		color: #fff;
+		padding: 5px 5px 12px;
+		width: 80%;
+		margin-top: 0;
+	}
+	button.add-info a {
+		font-size: 12px;
+		line-height: unset;
+		position: relative;
+		top: 6px;
+	}
+	.content-add {
+		width: 83%;
+		margin-top: -5px;
+	}
+	.inner-address-block > img {
+		width: 23px;
+		margin-right: 10px;
+	}
+	.section-home-card {
+		margin-bottom: 4em;
+	}
+	.unser-team-mobile {display: block;}
+	.unser-team-desktop {display: none;}
+	.unser-team h2 {
+		font-size: 36px;
+		line-height: 54px;
+	}
+	.home-address {
+		margin-bottom: 2em;
+	}
+	.unser-team .unser-card {
+		height: auto;
+		width: 202px;
+		position: relative;
+		left: 0;
+	}
+	.unser-card h5.card-title {
+		font-size: 18px;
+		line-height: 50px;
+		margin: 15px 0 0;
+	}
+	.unser-card p.card-text {
+		min-height: 42px;
+		font-size: 14px;
+		line-height: 21px;
+		margin-bottom: 10px
+	}
+	.unser-team .carousel-indicators [data-bs-target] {
+		width: 8px;
+		height: 8px;
+		background-color: #fff;
+		border: 1px solid #018343;
+		box-sizing: border-box;
+		border-radius: 0px 4px 4px 4px;
+	}
+	.unser-team .card-body {
+		padding: 1rem 10px;
+	}
+	.unser-team .carousel-indicators .active {
+		background-color: #018343 !important;
+	}
+	.unser-card img {
+		position: relative;
+		top: 10px;
+		left: -10px;
+	}
+	.team-btn {
+		font-size: 14px;
+		line-height: 21px;
+		padding: 12px;
+		width: 95%;
+	}
+	.unser-team-mobile h2 {
+		color: #4A4A4A;
+		font-weight: bold;
+		font-size: 36px;
+		line-height: 54px;
+		text-align: center;
+		margin-bottom: 1em;
+	}
+	.unser-team {
+		left: 10px;
+		margin: 0 auto 5em;
+	}
+	.unser-team-mobile .carousel-indicators [data-bs-target] {
+		width: 8px;
+		height: 8px;
+		margin-right: 8px;
+		margin-left: 8px;
+		background-color: #fff;
+		border: 1px solid #018343;
+		box-sizing: border-box;
+		border-radius: 0px 4px 4px 4px;
+	}
+	.unser-team-mobile .carousel-indicators .active {
+		background-color: #018343;
+	}
+	.carousel-indicators {
+		bottom: -60px;
+	}
+	.home-footer-address .hzusage-footer {
+		width: 100%;
+		margin: 2em auto 0;
+		font-size: 9px;
+		line-height: 14px;
+		background: #F5F5F5;
+		padding: 20px 0;
+	}
+	.home-footer-address .hzusage-address {
+		margin-top: 15px;
+	}
+	.container-footer {
+		margin-top: 0;
+	}
+	.footer-section a.footer-link {
+		font-size: 12px;
+		line-height: 18px;
+		margin-bottom: 5px;
+	}
+	.footer-section ul {
+		padding: 0;
+	}
+	.footer-section {
+		padding: 30px 40px 25px;
+	}
+	.footer-section span.social-icon {
+		width: 59%;
+		height: 30px;
+		font-size: 14px;
+		line-height: 28px;
+	}
+	.footer-section span.social-icon img {
+		width: 15px;
+		height: 15px;
+		margin-right: 8px;
+		vertical-align: -2px;
+	}
+	.footer-social-menu li.footer-social-item {
+		font-size: 13px;
+		margin: 15px 0;
+	}
+	.footer-section span.icon-social img {
+		width: 30px;
+		height: 30px;
+		margin-left: 20px;
+	}
+	/**Inner Pages**/
+	.photo-family {
+		display: none;
+	}
+	.container-page-content h2.page-title {
+		font-size: 18px;
+		line-height: 27px;
+		margin-bottom: 15px;
+	}
+	.page-content p, 
+	.page-content li {
+		font-size: 10px;
+		line-height: 15px;
+	}
+	.page-summary {
+		padding: 3em 1.2em 3em 2em;
+	}
+	.summary-shadow img {
+		width: 148px;
+		height: 148px;
+	}
+	.col-summary {
+		padding: 0;
+	}
+	.termin-button {
+		margin: 3em auto 2em;
+	}
+	button.btn-termin {
+		font-size: 12px;
+		line-height: 55px;
+		width: 67%;
+		height: 50px;
+	}
+	.baufina-list-content {
+		margin-top: 2.5em;
+		margin-left: 35px;
+		width: 92%;
+	}
+	ul.baufina-list li {
+		font-size: 14px;
+		line-height: 38px;
+	}
+	ul.baufina-list {
+		padding: 2.5em 0 2em 3em;
+	}
+	ul.baufina-list li:before, 
+	ul.ansch-list li:before {
+		width: 15px;
+		height: 15px;
+		margin-right: 1.5em;
+	}
+	.page-accordian h2 {
+		font-size: 24px;
+		line-height: 36px
+	}
+	.container-page-content button.accordion-button {
+		font-size: 10px;
+		line-height: 15px;
+	}
+	.container-page-content button.accordion-button:after {
+		width: 12px;
+		height: 3px;
+		left: 7px;
+	}
+	button.accordion-button[aria-expanded="true"]:after {
+		width: 10px;
+		height: 10px;
+		left: 7px;
+	}
+	.container-page-content button.accordion-button:before {
+		width: 26px;
+		height: 26px;
+		margin-right: 15px;
+	}
+	.accordion-body li, 
+	.accordion-body h5 {
+		font-size: 10px;
+		line-height: 15px;
+	}
+	.accordion-body ul {
+		padding: 10px 10px 10px 1em;
+	}
+	div#accList {
+		width: 90%;
+	}
+	.container-page-content .accordion-item {
+		box-shadow: 0px 2px 2px rgb(0 0 0 / 16%);
+		border-radius: 25px;
+		margin-bottom: 20px;
+	}
+	.accordion-body h5 {
+		padding: 0 10px 0 1.5em;
+	}
+	button.btn-acc {
+		font-size: 12px;
+		line-height: 55px;
+		width: 84%;
+		height: 50px;
+		margin: 25px 0 35px;
+	}
+}
